# nba-hate-tracker

./: .env.example  .gitignore  LICENSE  Makefile  README.md  git-strategy.md  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: code-reviewer.md  nba-superfan.md
.claude/commands/: commit-check.md
.claude/rules/: git.md  python.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATES/: bug.md  feature.md  refactor.md
app/: 🏆_Leaderboard.py
app/.streamlit/: config.toml
app/pages/: 1_👥_Flair_View.py  2_🔍_Player_Detail.py  3_ℹ️_About.py
app/utils/: data.py
config/: players.yaml  season.yaml  teams.yaml
config/2024-25/: players.yaml
data/dashboard/: aggregates.json
docs/: dashboard-spec.md  git-strategy.md  nba-hate-tracker-engineering-spec.md  nba-hate-tracker-pm-handoff.md
docs/research/: CLAUDE_CODE_BEST_PRACTICES.md  (+2 more)
notebooks/: 01_classifier_validation.ipynb  01_eda_exploration.ipynb  02_data_quality_report.ipynb  03_posts_context_evaluation.ipynb  04_cost_analysis.ipynb  05_sentiment_results_analysis.ipynb  06_aggregation_validation.ipynb
pipeline/: __init__.py  aggregation.py  arctic_shift.py  batch.py  processors.py
scripts/: __init__.py  aggregate_sentiment.py  clean_raw_comments.py  collect_results.py  download_arctic_shift.py  download_comments.py  download_posts.py  export_bar_race.py  extract_filter.py  filter_player_mentions.py  prepare_batches.py  run_batches.sh  submit_batches.py
tests/: conftest.py
utils/: constants.py  formatting.py  paths.py  player_config.py  season_config.py  team_config.py
(+12 files in other folders)
