[project]
name = "nba-hate-tracker"
version = "0.1.0"
description = "Sentiment analysis of NBA player mentions on Reddit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "praw",
    "polars",
    "vaderSentiment",
    "jupyter",
    "python-dotenv",
    "anthropic>=0.75.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]
